Fix navbar logo display on small devices

--- a/pydaygal/static/sass/common.scss
+++ b/pydaygal/static/sass/common.scss
@@ -45,3 +45,7 @@ $logo-height: 400px;
         color: $blue-dark !important;
     }
 }
+
+.navbar {
+  display: inherit;
+}
